@@ -1,4 +1,7 @@
-# This Build.PL for Pandoc-Elements was generated by Dist::Zilla::Plugin::ModuleBuildTiny 0.006.
+# This Build.PL for Pandoc-Elements was generated by Dist::Zilla::Plugin::ModuleBuildTiny 0.010.
+use strict;
+use warnings;
+
 use 5.010;
 use Module::Build::Tiny 0.039;
 Build_PL();
