@@ -3,7 +3,7 @@ use strict;
 use warnings;
 use 5.010;
 
-our $VERSION = '0.15';
+our $VERSION = '0.16';
 
 use Pod::Simple::SimpleTree;
 use Pandoc::Elements;
